ArchiveEntity @Secured Refactoring(aspects, request entities & etc)